# team-10-cluster

./: .gitignore  CHANGELOG.md  Makefile  README.md  dockerfile
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/workflows/: CI.yml  PR-title-linting.yml  auto-release.yml
backend/: pyproject.toml
backend/app/: __init__.py  __main__.py  cluster.py  drivecycle.py  routes.py  state.py  version.py
backend/app/data/: drive_cycle.json
backend/tests/: conftest.py  test_cluster.py  test_drivecycle.py  test_endpoints.py  test_smoke.py  test_state.py  test_version.py
docs/: README.md  architecture.md  getting-started.md  workflow.md
docs/backlog/: 01-oil-telltale.md  02-seatbelt-telltale.md  03-shift-light.md  04-mph-toggle.md  05-hyperflash.md  README.md  conflict-drill.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: Cluster.tsx  DigitalReadout.tsx  Gauge.tsx  MediaCard.tsx  MiniGauge.tsx  NavStrip.tsx  Simulator.tsx  TelltaleRow.tsx
frontend/src/hooks/: useBlink.ts  useClusterState.ts  useSmoothed.ts
frontend/src/lib/: gauges.test.ts  gauges.ts
frontend/src/styles/: cluster.css  simulator.css  theme.css
scripts/: dev.py
