[project]
name = "instrument-cluster-backend"
version = "0.1.0"
description = "ISSA Summer Practice — instrument cluster backend (Flask API + pure cluster logic)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
